apps/k3s-cluster/shopping-app/manifests/shoes-microservice-spring-boot.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoes-microservice-spring-boot
  namespace: microservices-shop-app
  labels:
    app: shoes-microservice-spring-boot
spec:
  selector:
    matchLabels:
      app: shoes-microservice-spring-boot
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shoes-microservice-spring-boot
    spec:
      containers:
      - name: shoes-microservice-spring-boot
        image: kannepallykoushikkumar/shoes-microservices-spring-boot:latest
        imagePullPolicy: Always
        livenessProbe:
          tcpSocket:
            port: 1002
          initialDelaySeconds: 20
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 1002
          name: shoes-ms-spring
      restartPolicy: Always
---

# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: shoes-service
  namespace: microservices-shop-app
spec:
  selector:
    app: shoes-microservice-spring-boot
  type: ClusterIP
  # type: NodePort
  ports:
  - name: shoes-ms-spring
    protocol: TCP
    port: 1002
    targetPort: 1002
    # nodePort: 30002
---
