apps/k3s-cluster/shopping-app/manifests/wishlist-microservice-python.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist-microservice-python
  namespace: microservices-shop-app
  labels:
    app: wishlist-microservice-python
spec:
  selector:
    matchLabels:
      app: wishlist-microservice-python
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wishlist-microservice-python
    spec:
      containers:
      - name: wishlist-microservice-python
        image: kannepallykoushikkumar/wishlist-microservice-python:latest
        imagePullPolicy: Always
        livenessProbe:
          tcpSocket:
            port: 1003
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 1003
          name: wishlist-ms
      restartPolicy: Always
---

# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: wishlist-service
  namespace: microservices-shop-app
spec:
  selector:
    app: wishlist-microservice-python
  type: ClusterIP
  ports:
  - name: wishlist-ms
    protocol: TCP
    port: 1003
    targetPort: 1003
    # nodePort: 30003
---
